# AIGym-CodeReviewEnv

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  __init__.py  _upload_hf.py  client.py  inference.py  interface.py  models.py  openenv.yaml  pyproject.toml
openenv_code_review_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scratch/: debug_refactor.py
scripts/: clean_tasks.py  verify_benchmark.py
server/: Dockerfile  __init__.py  app.py  graders.py  judge_client.py  my_first_env_environment.py  requirements.txt  tasks.py  utils.py
tests/: conftest.py  test_env.py  test_env_smoke.py  test_graders.py  test_reward_logic.py
training/: trajectory_collector.py
